# vyro

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODE_OF_CONDUCT.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  question.yml
.github/benchmarks/: baseline.json
.github/workflows/: ci.yml  docs.yml  release.yml
docs/en/: index.md
docs/en/getting-started/: installation.md
docs/fr/: core-concepts.md  faq.md  index.md  release-policy.md
docs/fr/cookbook/: index.md
docs/fr/getting-started/: first-api.md  installation.md  quickstart.md
docs/fr/guides/: cli.md  configuration.md  context.md  deployment.md  middleware.md  observability.md  openapi.md  routing.md  security.md
docs/fr/migration/: from-app-to-vyro.md
docs/fr/reference/: cli.md  errors.md  python.md
docs/fr/troubleshooting/: common-errors.md
docs/i18n/: glossary.md  style-guide.md
docs/ja/: core-concepts.md  faq.md  index.md  release-policy.md
docs/ja/cookbook/: index.md
docs/ja/getting-started/: first-api.md  installation.md  quickstart.md
docs/ja/guides/: cli.md  configuration.md  context.md  deployment.md  middleware.md  observability.md  openapi.md  routing.md  security.md
docs/ja/migration/: from-app-to-vyro.md
docs/ja/reference/: cli.md  errors.md  python.md
docs/ja/troubleshooting/: common-errors.md
docs/javascripts/: extra.js
docs/ko/: core-concepts.md  faq.md  index.md  release-policy.md
docs/ko/cookbook/: index.md
docs/ko/getting-started/: first-api.md  installation.md  quickstart.md
docs/ko/guides/: cli.md  configuration.md  context.md  deployment.md  middleware.md  observability.md  openapi.md  routing.md  security.md
docs/ko/migration/: from-app-to-vyro.md
docs/ko/reference/: cli.md  errors.md  python.md
docs/ko/troubleshooting/: common-errors.md
docs/ru/: core-concepts.md  faq.md  index.md  release-policy.md
docs/ru/cookbook/: index.md
docs/ru/getting-started/: first-api.md  installation.md  quickstart.md
docs/ru/guides/: cli.md  configuration.md  context.md  deployment.md  middleware.md  observability.md  openapi.md  routing.md  security.md
docs/ru/migration/: from-app-to-vyro.md
docs/ru/reference/: cli.md  errors.md  python.md
docs/ru/troubleshooting/: common-errors.md
docs/stylesheets/: extra.css
docs/vi/: core-concepts.md  faq.md  index.md  release-policy.md
docs/vi/cookbook/: index.md
docs/zh/: core-concepts.md  faq.md  index.md  release-policy.md
examples/: README.md  hello_world.py  middleware_stub.py  routing_basic.py  tuple_response.py
python/: README.md
python/vyro/: __init__.py  __main__.py  _native.pyi  app.py  errors.py  health.py  openapi.py  settings.py  typing.py  vyro.py
rust/: README.md
rust/benches/: README.md  json_bench.rs  routing_bench.rs
rust/src/: lib.rs  mod.rs
scripts/: README.md  __init__.py
scripts/ci/: __init__.py  bench_regression.py
scripts/dev/: __init__.py  bench.py  build.py  check.py  test.py
scripts/release/: README.md  __init__.py  assistant.py  changelog.py  gitmeta.py  release.py  render.py  versioning.py
tests/: README.md
tests/integration/: test_404_405.py  test_hello_world.py  test_release_notes_script.py  test_route_params.py  test_wildcard.py
tests/py/: test_app_contract.py  test_benchmark_gate.py  test_cli_contract.py  test_context_contract.py  test_dev_scripts.py  test_health_probes.py  test_http_sse.py  test_middleware_contract.py  test_middleware_idempotency.py  test_observability_latency.py  test_observability_logging.py  test_observability_metrics.py  test_observability_tracing.py  test_openapi.py  test_openapi_compat.py  test_routing_aot.py  test_routing_lint.py  test_routing_normalize.py  test_routing_signature.py  test_routing_tenant.py  test_routing_versioning.py  test_runtime_api_keys.py  test_runtime_audit.py  test_runtime_authorization.py  test_runtime_backpressure.py  test_runtime_blue_green.py  test_runtime_bulkhead.py  test_runtime_cache.py  test_runtime_cache_invalidation.py  test_runtime_canary.py  test_runtime_circuit_breaker.py  test_runtime_compression.py  test_runtime_concurrency.py  test_runtime_cors.py  test_runtime_cqrs.py  test_runtime_cron.py  test_runtime_csrf.py  test_runtime_db_pool.py  test_runtime_dead_letter.py  test_runtime_discovery.py  (+34 more)
tests/rust/: test_request_body_bytes.rs  test_response_map.rs  test_route_registry.rs  test_router_match.rs  test_runtime_bootstrap.rs  test_status_mapping.rs
(+199 files in other folders)
