[package]
name = "vyro-native"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Native Rust engine for vyro."

[lib]
name = "vyro_native"
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[features]
default = []
simd-json = ["dep:simd-json"]

[dependencies]
bytes = "1.8"
futures-util = "0.3"
http = "1.1"
http-body-util = "0.1"
hyper = { version = "1.5", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
matchit = "0.8"
pyo3 = { version = "0.25", features = ["abi3", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.25", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = { version = "0.14", optional = true, features = ["serde_impl"] }
tokio = { version = "1.40", features = ["fs", "macros", "net", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
url = "2.5"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "routing_bench"
harness = false
path = "rust/benches/routing_bench.rs"

[[bench]]
name = "json_bench"
harness = false
path = "rust/benches/json_bench.rs"

[[test]]
name = "test_router_match"
path = "tests/rust/test_router_match.rs"

[[test]]
name = "test_response_map"
path = "tests/rust/test_response_map.rs"

[[test]]
name = "test_status_mapping"
path = "tests/rust/test_status_mapping.rs"

[[test]]
name = "test_runtime_bootstrap"
path = "tests/rust/test_runtime_bootstrap.rs"
