[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "vyro"
version = "0.1.0"
description = "Rust-powered Python backend framework with fast routing."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Le Hung Quang Minh" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.maturin]
module-name = "vyro._native"
python-source = "python"
features = ["pyo3/extension-module"]
